자바의정석 변수

--- a/자바의정석/The_Essence_of_Java/.project
+++ b/자바의정석/The_Essence_of_Java/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Chapter02_Variable</name>
+	<name>The_Essence_of_Java</name>
 	<comment></comment>
 	<projects>
 	</projects>
